tạo bảng user, phân quyền user-admin-staff,fix lỗi các file liên quan sau khi phân quyền